# qusoliton-1.0.0

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  qusoliton.bib  requirements.txt  setup.py
qusoliton/: __init__.py
qusoliton/cusdenls/: __init__.py  cuSDENLS1D.py  cuSDENLS2D.py  cuSDENLS3D.py  cuUTILS.py
qusoliton/sdenls/: SDENLS1D.py  SDENLS2D.py  SDENLS3D.py  __init__.py
qusoliton/tests/: __init__.py  test_1D_fft_derivatives.py  test_2D_collapse.py  test_2D_collapse_fluctuactions.py  test_2D_diffraction.py  test_2D_laplacian.py  test_3D_diffraction.py  test_3D_load.py  test_3D_nonlinear.py  test_3D_relax.py  test_3D_relax_noiseevolution.py  test_Euler_1_1D.py  test_Euler_2_1D.py  test_Euler_3_1D.py  test_Euler_4_1D.py  test_Heun_1_1D.py  test_Heun_2_1D.py  test_Heun_3_1D.py  test_Heun_4_1D.py  test_Milstein_3_1D.py  test_Milstein_4_1D.py  test_Milstein_6_1D.py  test_deterministicNLS_1D.py
qusoliton/tests/tests_cupy/: compare.py  cu2D_diffraction.py  cuCondensation2D.py  cuEuler_1_1D.py  cuEuler_3_1D.py  cuTest_3D_diffraction.py  cuTest_3D_load.py  cuTest_3D_nonlinear.py  cuTest_3D_relax.py  cuTest_3D_relax_noiseevolution.py  test1_cuSDE1D_NLS_Heun.py
