[build-system]
requires = [
    "setuptools",
    "packaging",
    "wheel",
    "numpy>=1.21.4",
    "matplotlib",
    "termcolor",
    "pillow"
]
build-backend = "setuptools.build_meta"
[project]
name="qusoliton"
version="1.0"
authors=[
    { name="Claudio Conti", email="nonlinearxwaves@gmail.com"},
    ]
description="Package for the quantum solitons"
readme="README.md"
requires-python=">=3.7"
classifiers  = [
"Programming Language :: Python :: 3",
"Operating System :: OS independent",
]
[project.urls]
"Homepage"="https://github.com/nonlinearxwaves/qusoliton-1.0.0"
"Author Website"="https://www.newcomplexlight.org"
