[build-system]
requires=["hatchling"]
build-backend="hatchling.build"
[project]
name="qusoliton_nonlinearxwaves"
version="1.0.0"
authors=[{name="Claudio Conti", email="nonlinearxwaves@gmail.com"}]
license={file="LICENSE.txt"}
descrition="Package for quantum and classical nonlinearwaves"
readme="README.md"
requires-python=">=3.7"
classifiers=[
"Programming Language :: Python ::3",
"License :: OSI Approved :: BSD License",
"Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.4",
    "cupy",
    "matplotlib",
    "termcolor",
    "pillow"
]
[projects.urls]
"Homepage" = "https://github.com/nonlinearxwaves/qusoliton-1.0.0"
"Author Homepage" = "https://www.newcomplexlight.org"
