[build-system]
requires=["hatchling"]
build-backend="hatchling.build"
[project]
name="qusoliton"
version="1.0.0"
authors=[{name="Claudio Conti", email="nonlinearxwaves@gmail.com"}]
license={file="LICENSE.txt"}
descrition="Package for quantum and classical nonlinearwaves"
readme="README.md"
requires-python=">=3.7"
classifiers=[
"Programming Language :: Python",
"License :: OSI Approved :: BSD License",
"Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "termcolor",
    "pillow"
]
[project.optional-dependencies]
cuda=[
"cupy",
]
[projects.urls]
"Homepage" = "https://github.com/nonlinearxwaves/qusoliton-1.0.0"
"Author Homepage" = "https://www.newcomplexlight.org"
